Fix scrollbar-based layout shifts

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,11 +40,14 @@
 
 html {
   scroll-padding-top: 5rem;
+  scrollbar-gutter: stable;
   font-size: 100%;
   font-family:
     -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   line-height: 1.4;
+  /* stylelint-disable-next-line property-no-vendor-prefix */
+  -webkit-text-size-adjust: none; /* required for Safari iOS/iPadOS */
   text-size-adjust: none;
 }
 
@@ -89,6 +92,7 @@ body {
 :any-link:focus {
   text-decoration: none;
   outline: 0.1875rem solid var(--primary-selected);
+  outline-offset: 0.1875rem;
 }
 
 :any-link:hover,
